<resources>
    <string name="app_name">Quiz</string>

    <!-- Strings related to login and register -->
    <string name="prompt_name">Ime i prezime</string>
    <string name="prompt_email">E-mail adresa</string>
    <string name="prompt_password">Lozinka</string>
    <string name="prompt_repeat_password">Ponovite lozinku</string>
    <string name="prompt_current_password">Trenutna lozinka</string>
    <string name="action_login">Prijava</string>
    <string name="action_registration">Registracija</string>
    <string name="action_play">Igraj</string>
    <string name="action_single_player">Jedan igrač</string>
    <string name="action_multi_player">Dva igrača</string>
    <string name="action_send_report">Pošalji prijavu</string>
    <string name="action_view_statistics">Pregled statistike</string>
    <string name="action_change_password">Promijeni lozinku</string>
    <string name="action_save">Spremi promijene</string>
    <string name="action_block_user">Blokiraj korisnika</string>
    <string name="action_delete_user">Izbriši korisnika</string>
    <string name="action_take_picture">Uslikaj sliku kamerom</string>
    <string name="spinner_course">Odaberi smjer</string>
    <string name="spinner_semester">Odaberi semestar</string>
    <string name="spinner_subject">Odaberi predmet</string>
    <string name="spinner_colloquium_exam">Odaberi kolokvij/ispit</string>
    <string name="spinner_number_questions">Odaberi broj pitanja</string>
    <string name="action_browse_picture">Odaberi sliku s telefona</string>
    <string name="error_invalid_email">Morate unijeti e-mail adresu s TVZ domenom.</string>
    <string name="error_invalid_password">Lozinka je prekratka (minimalno 7 znakova).</string>
    <string name="error_incorrect_password">Lozinka je netočna</string>
    <string name="error_field_required">Polje je obavezno za ispunjavanje</string>
    <string name="action_create_account">Izradi korisnički račun</string>
    <string name="action_forgotten_password">Zaboravili ste lozinku?</string>
    <string name="action_existing_account">Posjedujem korisnički račun</string>
    <string name="action_report_question">Prijavi</string>
    <string name="action_view_reported_question">Pregled</string>
    <string name="action_add_question">Dodaj pitanje</string>
    <string name="student_title">Početnik</string>
    <string name="student_name">Pero Perić</string>
    <string name="student_semester">1. godina</string>
    <string name="student_course">Informatika</string>
    <string name="choose_play_mode">Način igranja:</string>
    <string name="subject_name">Matematika</string>
    <string name="questions_coverage">150/200</string>
    <string name="action_answer_check">Potvrdi odgovor</string>
    <string name="single_player_question">Koliko je 2 + 2?</string>
    <string name="current_question_single_player">Pitanje: 1/10</string>
    <string name="action_answer_1_single_player">5</string>
    <string name="action_answer_2_single_player">4</string>
    <string name="action_answer_3_single_player">3</string>
    <string name="action_answer_4_single_player">6</string>
    <string name="action_play_again_single_player">Ponovi</string>
    <string name="action_exit_single_player">Izlaz</string>
    <string name="text_single_player_result">Broj točnih odgovora:</string>
    <string name="number_correct_answer_single_player_end_result">9/10</string>
    <string name="hint_enter_report">Upišite primjedbu na pitanje...</string>
    <string name="action_accept_report">Odobri</string>
    <string name="action_reject_report">Odbaci</string>


    <!-- Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <!-- Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="nav_drawer_items_guest">
        <item>Početna</item>
        <item>Prijava</item>
    </string-array>

    <string-array name="nav_drawer_items_user">
        <item>Početna</item>
        <item>Editiraj profil</item>
        <item>Statistike</item>
        <item>Dodaj pitanje</item>
        <item>Odjava</item>
    </string-array>

    <string-array name="nav_drawer_items_admin">
        <item>Početna</item>
        <item>Editiraj profil</item>
        <item>Statistike</item>
        <item>Dodaj pitanje</item>
        <item>Verifikacija pitanja</item>
        <item>Prijavljena pitanja</item>
        <item>Odjava</item>
    </string-array>
    <string name="title_activity_tab">Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--
    <array name="nav_drawer_icons">
        <item></item>
        <item>@drawable/profile</item>
        <item>@drawable/edit_profile</item>
        <item>@drawable/log_in</item>
        <item>@drawable/log_out</item>
    </array>
-->
    <!-- Web socket -->
    <string name="send_mode_1">Echo STOMP</string>
    <string name="send_mode_2">Echo REST</string>
    <string name="connect_stomp">Connect STOMP</string>
    <string name="disconnect_stomp">DISCONNECT STOMP</string>

</resources>