<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.tvz.quiz.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView_single_player_question_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView_current_question_single_player"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/current_question_single_player"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView_single_player_question"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:text="@string/single_player_question"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_answer_1_single_player"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/action_answer_1_single_player"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_answer_2_single_player"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/action_answer_2_single_player"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_answer_3_single_player"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/action_answer_3_single_player"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_answer_4_single_player"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/action_answer_4_single_player"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_confirm_answer_single_player"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_answer_check"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>