<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/scrollView_play_mode_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_subject_image_play_mode"
                android:layout_width="97dp"
                android:layout_height="97dp"
                android:layout_gravity="center"
                android:layout_weight="1.46"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView_mode_name"
                android:layout_width="match_parent"
                android:layout_height="30.74dp"
                android:gravity="center_vertical"
                android:text="@string/subject_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView_mode_coverage"
                android:layout_width="match_parent"
                android:layout_height="30.74dp"
                android:gravity="center_vertical"
                android:text="@string/questions_coverage"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30.74dp"
                android:gravity="center_vertical"
                android:text="@string/choose_play_mode"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_colloquium_exam__play_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:spinnerMode="dialog"
                android:prompt="@string/spinner_colloquium_exam"
                android:dropDownWidth="match_parent" />

            <Spinner
                android:id="@+id/spinner_number_questions_play_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:spinnerMode="dialog"
                android:prompt="@string/spinner_number_questions"
                android:dropDownWidth="match_parent" />

            <Button
                android:id="@+id/button_single_player"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_single_player"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>