<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="hr.tvz.quiz.StatisticsActivity">

    <ScrollView
        android:id="@+id/scrollView_statistics_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_statistics_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:spinnerMode="dialog"
                android:prompt="@string/spinner_course"
                android:dropDownWidth="match_parent" />

            <Spinner
                android:id="@+id/spinner_statistics_semester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:spinnerMode="dialog"
                android:prompt="@string/spinner_semester"
                android:dropDownWidth="match_parent" />

            <Spinner
                android:id="@+id/spinner_statistics_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:spinnerMode="dialog"
                android:prompt="@string/spinner_subject"
                android:dropDownWidth="match_parent" />

            <Button
                android:id="@+id/button_view_statistics"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_view_statistics"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>